## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libfw.a

libfw_a_SOURCES =	 				\
		FWCommon.h					\
		TApplication.cpp			\
		TApplication.h				\
		TBehavior.cpp				\
		TBehavior.h					\
		TBroadcaster.cpp			\
		TBroadcaster.h				\
		TButton.cpp					\
		TButton.h					\
		TCheckBox.cpp				\
		TCheckBox.h					\
		TChildProcess.cpp			\
		TChildProcess.h				\
		TClipboard.cpp				\
		TClipboard.h				\
		TClipboardKeyBehavior.cpp	\
		TClipboardKeyBehavior.h		\
		TColor.cpp					\
		TColor.h					\
		TColumnResizer.cpp			\
		TColumnResizer.h			\
		TCommandHandler.cpp			\
		TCommandHandler.h			\
		TCommandID.h				\
		TCommonDialogs.cpp			\
		TCommonDialogs.h			\
		TCursor.cpp					\
		TCursor.h					\
		TDialogWindow.cpp			\
		TDialogWindow.h				\
		TDirectory.cpp				\
		TDirectory.h				\
		TDirectoryListView.cpp		\
		TDirectoryListView.h		\
		TDocument.cpp				\
		TDocument.h					\
		TDocumentWindow.cpp			\
		TDocumentWindow.h			\
		TDrawContext.cpp			\
		TDrawContext.h				\
		TDrawable.cpp				\
		TDrawable.h					\
		TDynamicArray.cpp			\
		TDynamicArray.h				\
		TException.cpp				\
		TException.h				\
		TFile.cpp					\
		TFile.h						\
		TFont.cpp					\
		TFont.h						\
		TFWCursors.cpp				\
		TFWCursors.h				\
		TGeometry.cpp				\
		TGeometry.h					\
		TGraphicsUtils.cpp			\
		TGraphicsUtils.h			\
		TGridView.cpp				\
		TGridView.h					\
		TIdler.cpp					\
		TIdler.h					\
		TImage.cpp					\
		TImage.h					\
		TImageView.cpp				\
		TImageView.h				\
		TInputContext.cpp			\
		TInputContext.h				\
		TLinkedList.cpp				\
		TLinkedList.h				\
		TList.cpp					\
		TList.h						\
		TListView.cpp				\
		TListView.h					\
		TListener.cpp				\
		TListener.h					\
		TMenu.cpp					\
		TMenu.h						\
		TMenuBar.cpp				\
		TMenuBar.h					\
		TMenuItem.cpp				\
		TMenuItem.h					\
		TMenuOwner.cpp				\
		TMenuOwner.h				\
		TMouseTrackingIdler.cpp		\
		TMouseTrackingIdler.h		\
		TNumericEntryBehavior.cpp	\
		TNumericEntryBehavior.h		\
		TPanelWindow.cpp			\
		TPanelWindow.h				\
		TPixmap.cpp					\
		TPixmap.h					\
		TPixmapButton.cpp			\
		TPixmapButton.h				\
		TPopupButton.cpp			\
		TPopupButton.h				\
		TPopupMenu.cpp				\
		TPopupMenu.h				\
		TRadio.cpp					\
		TRadio.h					\
		TReferenceCounted.cpp		\
		TReferenceCounted.h			\
		TRegion.cpp					\
		TRegion.h					\
		TScrollBar.cpp				\
		TScrollBar.h				\
		TScroller.cpp				\
		TScroller.h					\
		TSeparatorItem.cpp			\
		TSeparatorItem.h			\
		TSettingsFile.cpp			\
		TSettingsFile.h				\
		TSocket.cpp					\
		TSocket.h					\
		TSplitter.cpp				\
		TSplitter.h					\
		TStaticText.cpp				\
		TStaticText.h				\
		TStatusBar.cpp				\
		TStatusBar.h				\
		TString.cpp					\
		TString.h					\
		TSubWindowIterator.cpp		\
		TSubWindowIterator.h		\
		TTabTargetBehavior.cpp		\
		TTabTargetBehavior.h		\
		TTextField.cpp				\
		TTextField.h				\
		TTextFindBehavior.cpp		\
		TTextFindBehavior.h			\
		TTextLayout.cpp				\
		TTextLayout.h				\
		TTextListView.cpp			\
		TTextListView.h				\
		TTextView.cpp				\
		TTextView.h					\
		TTopLevelWindow.cpp			\
		TTopLevelWindow.h			\
		TTreeNode.cpp				\
		TTreeNode.h					\
		TTreeView.cpp				\
		TTreeView.h					\
		TTypeSelectable.h			\
		TTypeSelectBehavior.cpp		\
		TTypeSelectBehavior.h		\
		TView.cpp					\
		TView.h						\
		TWindow.cpp					\
		TWindow.h					\
		TWindowContext.cpp			\
		TWindowContext.h			\
		TWindowPositioners.cpp		\
		TWindowPositioners.h		\
		TWindowsMenu.cpp			\
		TWindowsMenu.h				\
		intl.h
		
EXTRA_DIST = 								\
		Pixmaps/CheckBoxOff.xpm				\
		Pixmaps/CheckBoxOffDisabled.xpm		\
		Pixmaps/CheckBoxOffPressed.xpm		\
		Pixmaps/CheckBoxOn.xpm				\
		Pixmaps/CheckBoxOnDisabled.xpm		\
		Pixmaps/CheckBoxOnPressed.xpm		\
		Pixmaps/DownArrow.xpm				\
		Pixmaps/FileIcon.xpm				\
		Pixmaps/FolderIcon.xpm				\
		Pixmaps/GrayFileIcon.xpm			\
		Pixmaps/GrayStipple.xpm				\
		Pixmaps/LeftArrow.xpm				\
		Pixmaps/MenuArrow.xpm				\
		Pixmaps/MenuCheck.xpm				\
		Pixmaps/RadioOff.xpm				\
		Pixmaps/RadioOffDisabled.xpm		\
		Pixmaps/RadioOffPressed.xpm			\
		Pixmaps/RadioOn.xpm					\
		Pixmaps/RadioOnDisabled.xpm			\
		Pixmaps/RadioOnPressed.xpm			\
		Pixmaps/RightArrow.xpm				\
		Pixmaps/TriangleClosed.xpm			\
		Pixmaps/TriangleOpened.xpm			\
		Pixmaps/TriangleTurning.xpm			\
		Pixmaps/UpArrow.xpm


AM_CXXFLAGS = @CXXFLAGS@ @MY_CXXFLAGS@ -DLOCALEDIR=\""$(localedir)"\"
